force-app/main/default/objects/Opportunity_Closure__c/Opportunity_Closure__c.object-meta.xml
<CustomObject>
    <description>This custom object collects opportunity closure details</description>
    <label>Opportunity Closure</label>
    <nameField>
        <displayFormat>OC-{0000}</displayFormat>
        <label>Opportunity Closure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Closure</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>