force-app/main/default/objects/Opportunity_Closure__c/fields/Competitor_Awareness__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Awareness__c</fullName>
    <description>Do you know the competitor who was awarded the business?</description>
    <inlineHelpText>Do you know the competitor who was awarded the business?</inlineHelpText>
    <label>Competitor Awareness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Known</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>