force-app/main/default/objects/Opportunity_Closure__c/fields/Detailed_Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Closure_Reason__c</fullName>
    <description>Provide detailed explanation of why the deal is moving to a closed stage (On Hold, Dead, Closed Lost)</description>
    <inlineHelpText>Provide detailed explanation of why the deal is moving to a closed stage (On Hold, Dead, Closed Lost)</inlineHelpText>
    <label>Detailed Closure Reason</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>