force-app/main/default/objects/Opportunity_Closure__c/fields/Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Incumbent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the winning competitor the incumbent SI?</description>
    <inlineHelpText>Is the winning competitor the incumbent SI?</inlineHelpText>
    <label>Incumbent</label>
    <type>Checkbox</type>
</CustomField>