force-app/main/default/objects/Opportunity_Closure__c/fields/Primary_Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Closure_Reason__c</fullName>
    <description>What is the general reason the deal is moving to a closed stage (On hold, Dead, Closed Lost)</description>
    <inlineHelpText>What is the general reason the deal is moving to a closed stage (On hold, Dead, Closed Lost)</inlineHelpText>
    <label>Primary Closure Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Readiness</fullName>
            </value>
            <value>
                <fullName>Competitive Landscape</fullName>
            </value>
            <value>
                <fullName>Duplicate Opportunity</fullName>
            </value>
            <value>
                <fullName>Partner Dynamics</fullName>
            </value>
            <value>
                <fullName>Positioning</fullName>
            </value>
            <value>
                <fullName>Price &amp; Rates</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
                <isActive>false</isActive>
                <label>Relationship</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>