force-app/main/default/objects/Opportunity_Closure__c/fields/Winning_Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Winning_Bid_Amount__c</fullName>
    <description>The dollar amount of the winning bid, if known</description>
    <inlineHelpText>The dollar amount of the winning bid, if known</inlineHelpText>
    <label>Winning Bid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>