force-app/main/default/objects/Opportunity_Closure__c/fields/Winning_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Winning_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the  competing SI that was awarded the business?</description>
    <inlineHelpText>Who is the  competing SI that was awarded the business?</inlineHelpText>
    <label>Winning Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Closure</relationshipLabel>
    <relationshipName>Opportunity_Closure</relationshipName>
    <type>Lookup</type>
</CustomField>