force-app/main/default/objects/Opportunity_Closure__c/validationRules/Competitor_Awareness_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Competitor_Awareness_Required</fullName>
    <active>true</active>
    <description>If &quot;Primary Closure Reason&quot; = Competitive Landscape, &quot;Competitive Awareness&quot; is a required field</description>
    <errorConditionFormula>AND (
ISPICKVAL( Primary_Closure_Reason__c   , &quot;Competitive Landscape&quot;),
ISBLANK(TEXT(Competitor_Awareness__c )
)
)</errorConditionFormula>
    <errorMessage>If &quot;Primary Closure Reason&quot; = Competitive Landscape, &quot;Competitive Awareness&quot; is a required field</errorMessage>
</ValidationRule>