force-app/main/default/objects/Opportunity_Closure__c/validationRules/Winning_Competitor_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Winning_Competitor_Required</fullName>
    <active>false</active>
    <description>When &quot;Competitor Awareness&quot; = Known, &quot;Winning Competitor&quot; is a required field</description>
    <errorConditionFormula>AND (
ISPICKVAL(  Competitor_Awareness__c  , &quot;Known&quot;),
ISBLANK(Winning_Competitor__c )
)</errorConditionFormula>
    <errorMessage>When &quot;Competitor Awareness&quot; = Known, &quot;Winning Competitor&quot; is a required field</errorMessage>
</ValidationRule>